# axiom

./: .gitignore  README.md  docker-compose.yml
services/olap-studio/: Dockerfile  pyproject.toml
services/olap-studio/app/: main.py
services/olap-studio/app/api/: ai_generation.py  airflow.py  cube.py  datasource.py  etl.py  integration.py  lineage.py  model.py  nl2sql.py  pivot.py
services/olap-studio/app/core/: config.py  context.py  database.py  error_handler.py  logging_config.py  metrics_middleware.py  middleware.py  rate_limiter.py  response.py  telemetry.py
services/olap-studio/app/events/: outbox.py  publisher.py
services/olap-studio/app/integrations/: synapse_client.py  vision_client.py  weaver_client.py
services/olap-studio/app/services/: ai_cube_service.py  airflow_service.py  llm_client.py  nl2sql_workflow.py  sql_generator.py  xml_parser.py
services/olap-studio/migrations/: 001_initial_schema.sql
services/olap-studio/tests/: test_airflow_service.py  test_context.py  test_outbox.py  test_pivot_api.py  test_sql_generator.py  test_xml_parser.py
services/oracle/: Dockerfile  pyproject.toml  requirements.txt  sqlglot.py  structlog.py
services/oracle/app/: main.py
services/oracle/app/api/: cache.py  events.py  feedback.py  feedback_stats.py  health.py  meta.py  text2sql.py
services/oracle/app/core/: auth.py  config.py  feedback_analytics.py  graph_search.py  llm_factory.py  quality_judge.py  query_history.py  rate_limit.py  schema_context.py  security.py  sql_exec.py  sql_guard.py  synapse_client.py  (+2 more)
services/synapse/: Dockerfile  pyproject.toml  requirements.txt
services/synapse/app/: main.py
services/vision/: Dockerfile  pyproject.toml  requirements.txt
services/vision/app/: main.py
services/vision/migrations/: 001_vision_analytics.sql  002_case_summary.sql
services/vision/tests/: test_business_calendar.py  test_holiday_store.py  test_scenario_store.py  test_whatif_wizard_api.py  test_whatif_wizard_service.py
services/weaver/: Dockerfile  Makefile  pyproject.toml  requirements.txt
services/weaver/app/: main.py
services/weaver/scripts/: weaver_external_exit_gate.py
(+1627 files in other folders)
