[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-vision"
version = "0.1.0"
description = "Axiom Vision service package"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]
namespaces = true
