[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-weaver"
version = "0.1.0"
description = "Axiom Weaver service package"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]
namespaces = true
